--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html>
   <head>
   </head>
-  <body>hoge </h1>
+  <body>
+  <h1>サンゴ礁について</h1>
   <h3>サンゴ礁とは？</h3>
-  <p>珊瑚礁の種類</p>
+  <p>サンゴ礁の種類</p>
   </body>
 </html>
