--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
+  <title>サンゴ礁について</title>
   </head>
   <body>
-  <h1>サンゴ礁について</h1>
-  <h3>サンゴ礁とは？</h3>
+    
+  <h2>サンゴ礁とは？</h2>
   <p>サンゴ礁の種類</p>
+    
   </body>
 </html>
