--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     
   <h2>サンゴ礁とは？</h2>
   <p>サンゴ礁の種類</p>
-    
+  <p>◯裾礁（きょしょう）→ 海岸に接して発達したサンゴ礁。浅い礁池をもつことが多く、日本のサンゴ礁は大部分がこのタイプ。</p>    
   </body>
 </html>
