--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     
   <h2>サンゴ礁とは？</h2>
   <p>サンゴ礁の種類</p>
-  <p>◯裾礁（きょしょう）→ 海岸に接して発達したサンゴ礁。浅い礁池をもつことが多く、日本のサンゴ礁は大部分がこのタイプ。</p>    
+    <p>◯裾礁（きょしょう）→ 海岸に接して発達したサンゴ礁。浅い礁池をもつことが多く、日本のサンゴ礁は大部分がこのタイプ。</p>
+    <p>◯堡礁（ほしょう）→ 陸地とサンゴ礁の間に深さ数10mの浅い海（礁湖：ラグーン）を挟んだ沖合に発達したサンゴ礁。</p>
+    <p>◯環礁（かんしょう）→ 大洋にリング状に発達し、内部に深い礁湖があるサンゴ礁。</p>
   </body>
 </html>
