--- a/index_2.html
+++ b/index_2.html
@@ -6,7 +6,26 @@
 <body>
 
 <h1>サンゴとは？</h1>
-<p>一見すると動きがまったくないことから…</p>
+　<p>一見すると動きがまったくないことから、サンゴ礁を構成するサンゴは「植物」あるいは「鉱</p>
+  <p>物」のように考えている人もいるかもしれませんが、サンゴは、イソギンチャクやクラゲと</p>
+  <p>同じ刺胞動物と呼ばれる「動物」で、小さな個体がいくつも集まって群体を形成しています。</p>
+  <p>一つひとつのサンゴは右のイラストのようにポリプと呼ばれる本体と石灰質の骨格の部分</p>
+  <p>でつくられています。サンゴの体の中には褐虫藻という植物プランクトンがたくさん入っ</p>
+  <p>ています。枝状やテーブル状、塊状に成長。それが幾重にも積み重なって、サンゴ礁という</p>
+  <p>複雑な「地形」をつくるのです。ポリプには触手に囲まれた口があり、ここで摂食や排泄、</p>
+  <p>産卵などを行っています。細胞内には藻を共生させ、互いに補い合って生きています。</p>
+  
+  <h1>サンゴ礁とは？</h1>
+  <p>サンゴ礁とはサンゴがつくった石灰質の骨格が、長い時間をかけて積み重なり海面近くま</p>
+  <p>で高くなった「地形」のことをいいます。サンゴはそこに存在するほかの生物や水中の栄養</p>
+  <p>分など、さまざまな要因を受けながら、生態活動を行っているのです。現在、世界で見られ</p>
+  <p>るサンゴ礁は5000年以上生きているものが多く、分布範囲は、世界100カ国以上の領域に</p>
+  <p>わたり、面積にして60万平方キロを超えるといわれています。</p>
+  <p></p>
+  <p></p>
+  <p></p>
+  <p></p>
+  <p></p>
 
 </body>
 </html>
