--- a/index.html
+++ b/index.html
@@ -13,5 +13,13 @@
     <p>◯裾礁（きょしょう）→ 海岸に接して発達したサンゴ礁。浅い礁池をもつことが多く、日本のサンゴ礁は大部分がこのタイプ。</p>
     <p>◯堡礁（ほしょう）→ 陸地とサンゴ礁の間に深さ数10mの浅い海（礁湖：ラグーン）を挟んだ沖合に発達したサンゴ礁。</p>
     <p>◯環礁（かんしょう）→ 大洋にリング状に発達し、内部に深い礁湖があるサンゴ礁。</p>
-  </body>
+    
+  <p3>＜サンゴ礁の機能＞</p3>
+    <p>→水産機能</p>
+    <p>サンゴ礁域には色鮮やかな魚を始め、さまざまな生き物の格好の生息地になっている。サンゴ礁は海洋生物の繁殖・成育・索餌場の機能を持つので、資源涵養の場であり、好漁
+場としての機能を持つ。</p>
+    <p>→観光、景観機能</p>
+    <p>美しいサンゴ礁域の海岸は、海水浴、マリンレジャーの場として利用されている。また、伝統行事やイベントなども開催され、地域における交流の場として活用されている。</p>
+
+
 </html>
