--- a/index_2.html
+++ b/index_2.html
@@ -34,6 +34,7 @@
   <p>また、温暖化等による大規模な白化現象や、台風によるサンゴ礁の破壊、食害動物による</p>
   <p>被害などもサンゴを死滅させる原因となり、サンゴ礁の存亡は国内でも各地で深刻化して</p>
   <p>いる。</p>
-
+  <p></p>
+  <p><a href="./index.html">modoru</a></p>
 </body>
 </html>
