--- a/index_2.html
+++ b/index_2.html
@@ -6,34 +6,32 @@
 <body>
 
 <h2>サンゴとは？</h2>
-　<p>一見すると動きがまったくないことから、サンゴ礁を構成するサンゴは「植物」あるいは「鉱</p>
-  <p>物」のように考えている人もいるかもしれませんが、サンゴは、イソギンチャクやクラゲと</p>
-  <p>同じ刺胞動物と呼ばれる「動物」で、小さな個体がいくつも集まって群体を形成しています。</p>
-  <p>一つひとつのサンゴは右のイラストのようにポリプと呼ばれる本体と石灰質の骨格の部分</p>
-  <p>でつくられています。サンゴの体の中には褐虫藻という植物プランクトンがたくさん入っ</p>
-  <p>ています。枝状やテーブル状、塊状に成長。それが幾重にも積み重なって、サンゴ礁という</p>
-  <p>複雑な「地形」をつくるのです。ポリプには触手に囲まれた口があり、ここで摂食や排泄、</p>
-  <p>産卵などを行っています。細胞内には藻を共生させ、互いに補い合って生きています。</p>
+　<p>一見すると動きがまったくないことから、サンゴ礁を構成するサンゴは「植物」あるいは「鉱物」のように考えている人もいるかもしれませんが、サンゴは、イソギンチャクやクラゲと
+  同じ刺胞動物と呼ばれる「動物」で、小さな個体がいくつも集まって群体を形成しています。</p>
+  <p>一つひとつのサンゴは右のイラストのようにポリプと呼ばれる本体と石灰質の骨格の部分でつくられています。</p>
+  <p>サンゴの体の中には褐虫藻という植物プランクトンがたくさん入っています。</p>
+  <p>枝状やテーブル状、塊状に成長します。それが幾重にも積み重なって、サンゴ礁という複雑な「地形」をつくるのです。</p>
+  <p>ポリプには触手に囲まれた口があり、ここで摂食や排泄、産卵などを行っています。</p>
+  <p>細胞内には藻を共生させ、互いに補い合って生きています。</p>
+  <p> </p>
   
 <h2>サンゴ礁とは？</h2>
-  <p>サンゴ礁とはサンゴがつくった石灰質の骨格が、長い時間をかけて積み重なり海面近くま</p>
-  <p>で高くなった「地形」のことをいいます。サンゴはそこに存在するほかの生物や水中の栄養</p>
-  <p>分など、さまざまな要因を受けながら、生態活動を行っているのです。現在、世界で見られ</p>
-  <p>るサンゴ礁は5000年以上生きているものが多く、分布範囲は、世界100カ国以上の領域に</p>
-  <p>わたり、面積にして60万平方キロを超えるといわれています。</p>
+  <p>サンゴ礁とはサンゴがつくった石灰質の骨格が、長い時間をかけて積み重なり海面近くま<で高くなった「地形」のことをいいます。/p>
+  <p>サンゴはそこに存在するほかの生物や水中の栄養分など、さまざまな要因を受けながら、生態活動を行っているのです。</p>
+  <p>現在、世界で見られるサンゴ礁は5000年以上生きているものが多く、分布範囲は、世界100カ国以上の領域にわたり、面積にして60万平方キロを超えるといわれています。</p>
+  <p> </p>
   
 <h2>サンゴ礁の成長の仕方</h2>
   <p>個体がどんどん分裂し、群体を作りながら成長します。1つの群体には数百から数千、大き</p>
   <p>なものでは数万の個体が集まっています（右 スボミキクメイシの標本写真）。さらに、造礁</p>
   <p>サンゴは石灰質の石の骨格を作ります。生きている群体の下に骨格を作り、成長とともに骨</p>
   <p>格が大きくなっていきます。</p>
+    <p> </p>
   
 <h2>現状</h2>  
-  <p>世界のサンゴ礁の58 %が潜在的に私たち人間の活動（沿岸開発、生物資源の乱獲、海洋</p>
-  <p>汚染、森林伐採や農地開発に起因する表土の流出など）によって脅かされているという。</p>
-  <p>また、温暖化等による大規模な白化現象や、台風によるサンゴ礁の破壊、食害動物による</p>
-  <p>被害などもサンゴを死滅させる原因となり、サンゴ礁の存亡は国内でも各地で深刻化して</p>
-  <p>いる。</p>
+  <p>世界のサンゴ礁の58 %が潜在的に私たち人間の活動（沿岸開発、生物資源の乱獲、海洋汚染、森林伐採や農地開発に起因する表土の流出など）によって脅かされているという。</p>
+  <p>また、温暖化等による大規模な白化現象や、台風によるサンゴ礁の破壊、食害動物による被害などもサンゴを死滅させる原因となり、サンゴ礁の存亡は国内でも各地で深刻化している。</p>
+  <p></p>
   <p></p>
   <p><a href="./index.html">modoru</a></p>
 </body>
