--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
    
   <h1></h1>
     
-  <p2>＜サンゴ礁の種類＞</p2>
+  <h2>＜サンゴ礁の種類＞</h2>
     <p>◯裾礁（きょしょう）→ 海岸に接して発達したサンゴ礁。浅い礁池をもつことが多く、日本のサンゴ礁は大部分がこのタイプ。</p>
     <p>◯堡礁（ほしょう）→ 陸地とサンゴ礁の間に深さ数10mの浅い海（礁湖：ラグーン）を挟んだ沖合に発達したサンゴ礁。</p>
     <p>◯環礁（かんしょう）→ 大洋にリング状に発達し、内部に深い礁湖があるサンゴ礁。</p>
     
-  <p2>＜サンゴ礁の機能＞</p2>
+  <h2>＜サンゴ礁の機能＞</h2>
     <p>→水産機能</p>
     <p>サンゴ礁域には色鮮やかな魚を始め、さまざまな生き物の格好の生息地になっている。サンゴ礁は海洋生物の繁殖・成育・索餌場の機能を持つので、資源涵養の場であり、好漁場としての機能を持つ。</p>
     <p>→観光、景観機能</p>
