--- a/index_main.html
+++ b/index_main.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>サンゴ礁を守るために</title>
-</head>
 
 <body>
+<h1>サンゴ礁を守るために</h1>
 <p><a href="./index_2.html">サンゴ礁について</a><p>
 </body>
 </html>
