--- a/index_2.html
+++ b/index_2.html
@@ -1,11 +1,8 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>サンゴ礁について</title>
-</head>
 <body>
-<h2>サンゴとは？</h2>
-　<p>一見すると動きがまったくないことから、サンゴ礁を構成するサンゴは「植物」あるいは「鉱物」のように考えている人もいるかもしれませんが、サンゴは、イソギンチャクやクラゲと
+<h2>＜サンゴとは？＞</h2>
+  <p>一見すると動きがまったくないことから、サンゴ礁を構成するサンゴは「植物」あるいは「鉱物」のように考えている人もいるかもしれませんが、サンゴは、イソギンチャクやクラゲと
   同じ刺胞動物と呼ばれる「動物」で、小さな個体がいくつも集まって群体を形成しています。</p>
   <p>一つひとつのサンゴは右のイラストのようにポリプと呼ばれる本体と石灰質の骨格の部分でつくられています。</p>
   <p>サンゴの体の中には褐虫藻という植物プランクトンがたくさん入っています。</p>
