--- a/index_2.html
+++ b/index_2.html
@@ -4,11 +4,12 @@
 <h2>＜サンゴとは？＞</h2>
   <p>一見すると動きがまったくないことから、サンゴ礁を構成するサンゴは「植物」あるいは「鉱物」のように考えている人もいるかもしれませんが、サンゴは、イソギンチャクやクラゲと
   同じ刺胞動物と呼ばれる「動物」で、小さな個体がいくつも集まって群体を形成しています。</p>
-  <p>一つひとつのサンゴは右のイラストのようにポリプと呼ばれる本体と石灰質の骨格の部分でつくられています。</p>
+  <p>一つひとつのサンゴは下のイラストのようにポリプと呼ばれる本体と石灰質の骨格の部分でつくられています。</p>
   <p>サンゴの体の中には褐虫藻という植物プランクトンがたくさん入っています。</p>
   <p>枝状やテーブル状、塊状に成長します。それが幾重にも積み重なって、サンゴ礁という複雑な「地形」をつくるのです。</p>
   <p>ポリプには触手に囲まれた口があり、ここで摂食や排泄、産卵などを行っています。</p>
   <p>細胞内には藻を共生させ、互いに補い合って生きています。</p>
+  <img scr="https://www.mitsubishicorp.com/jp/ja/csr/contribution/environment/activities01/img/pic_activities01-02_01.jpg">
   <p> </p>
   
 <h2>＜サンゴ礁とは？＞</h2>
