--- a/index_2.html
+++ b/index_2.html
@@ -9,7 +9,7 @@
   <p>枝状やテーブル状、塊状に成長します。それが幾重にも積み重なって、サンゴ礁という複雑な「地形」をつくるのです。</p>
   <p>ポリプには触手に囲まれた口があり、ここで摂食や排泄、産卵などを行っています。</p>
   <p>細胞内には藻を共生させ、互いに補い合って生きています。</p>
-  <img scr="https://www.mitsubishicorp.com/jp/ja/csr/contribution/environment/activities01/img/pic_activities01-02_01.jpg">
+  <img src="https://www.mitsubishicorp.com/jp/ja/csr/contribution/environment/activities01/img/pic_activities01-02_01.jpg">
   <p> </p>
   
 <h2>＜サンゴ礁とは？＞</h2>
