--- a/index_main.html
+++ b/index_main.html
@@ -4,5 +4,11 @@
 <body>
 <h1>サンゴを守るために</h1>
 <p><a href="./index_2.html">サンゴ礁について</a><p>
+
+  
+  
+  
+  
+<p><a href="https://hoshinokazu.github.io/">オニヒトデの有効活用法</a><p>
 </body>
 </html>
