--- a/index_2.html
+++ b/index_2.html
@@ -19,15 +19,16 @@
   <p> </p>
   
 <h2>＜サンゴ礁の成長の仕方＞</h2>
-  <p>個体がどんどん分裂し、群体を作りながら成長します。1つの群体には数百から数千、大きなものでは数万の個体が集まっています（右 スボミキクメイシの標本写真）。</p>
+  <p>個体がどんどん分裂し、群体を作りながら成長します。1つの群体には数百から数千、大きなものでは数万の個体が集まっています。</p>
   <p>さらに、造礁サンゴは石灰質の石の骨格を作ります。生きている群体の下に骨格を作り、成長とともに骨格が大きくなっていきます。</p>
   <p> </p>
   
 <h2>＜現状＞</h2>  
-  <p>世界のサンゴ礁の58 %が潜在的に私たち人間の活動（沿岸開発、生物資源の乱獲、海洋汚染、森林伐採や農地開発に起因する表土の流出など）によって脅かされているという。</p>
+  <p>世界のサンゴ礁の58 %が潜在的に私たち人間の活動（沿岸開発、生物資源の乱獲、海洋汚染、森林伐採や農地開発に起因する表土の流出など）によって脅かされているといいます。</p>
   <p>また、温暖化等による大規模な白化現象や、台風によるサンゴ礁の破壊、食害動物による被害などもサンゴを死滅させる原因となり、サンゴ礁の存亡は国内でも各地で深刻化している。</p>
   <p></p>
-  <p></p>
+  <h3>・参考文献</h3>
+   <img src="https://www.mitsubishicorp.com/jp/ja/csr/contribution/environment/activities01/activities01-02.html">
   <p><a href="./index.html">つづき</a></p>
 </body>
 </html>
