--- a/index_2.html
+++ b/index_2.html
@@ -3,22 +3,22 @@
 <body>
 <h1>サンゴとサンゴ礁は違う！？</h1>
 <h2>＜サンゴとは？＞</h2>
-  <p>一見すると動きがまったくないことから、サンゴ礁を構成するサンゴは「植物」あるいは「鉱物」のように考えている人もいるかもしれませんが、サンゴは、イソギンチャクやクラゲと
-  同じ刺胞動物と呼ばれる「動物」で、小さな個体がいくつも集まって群体を形成しています。</p>
-  <p>一つひとつのサンゴはポリプと呼ばれる本体と石灰質の骨格の部分でつくられています。</p>
-  <p>サンゴの体の中には褐虫藻という植物プランクトンがたくさん入っています。</p>
-  <p>ポリプには触手に囲まれた口があり、ここで摂食や排泄、産卵などを行っています。</p>
-  <p>細胞内には藻を共生させ、互いに補い合って生きています。</p>
+  <p>サンゴは、イソギンチャクやクラゲと同じ刺胞動物と呼ばれる「動物」!
+    小さな個体がいくつも集まって群体を形成している</p>
+  <p>一つひとつのサンゴはポリプと呼ばれる本体と石灰質の骨格の部分でつくられている。</p>
+  <p>サンゴの体の中には褐虫藻という植物プランクトンがたくさん！/p>
+  <p>ポリプには触手に囲まれた口があり、ここで摂食や排泄、産卵などを行う！</p>
+  <p>細胞内には藻を共生させ、互いに補い合って生きているよ！</p>
    <img src="https://www.mitsubishicorp.com/jp/ja/csr/contribution/environment/activities01/img/pic_activities01-02_01.jpg">
   <p> </p>
   
 <h2>＜サンゴ礁とは？＞</h2>
-  <p>サンゴ礁とはサンゴがつくった石灰質の骨格が、長い時間をかけて積み重なり海面近くまで高くなった「地形」のことをいいます。</p>
-  <p>サンゴはそこに存在するほかの生物や水中の栄養分など、さまざまな要因を受けながら、生態活動を行っているのです。</p>
-  <p>現在、世界で見られるサンゴ礁は5000年以上生きているものが多く、分布範囲は、世界100カ国以上の領域にわたり、面積にして60万平方キロを超えるといわれています。</p>
+  <p>サンゴ礁とはサンゴがつくった石灰質の骨格が、長い時間をかけて積み重なり海面近くまで高くなった「地形」のこと！</p>
+  <p>サンゴはそこに存在するほかの生物や水中の栄養分など、さまざまな要因を受けながら、生態活動を行っている。</p>
+  <p>現在、世界で見られるサンゴ礁は5000年以上生きているものが多く、分布範囲は、世界100カ国以上の領域にわたり、面積にして60万平方キロを超えるといわれているよ！</p>
   <p> </p>
   
-<h2>＜サンゴ礁の成長の仕方＞</h2>
+<h2>＜サンゴ＞</h2>
   <p>個体がどんどん分裂し、群体を作りながら成長します。1つの群体には数百から数千、大きなものでは数万の個体が集まっています。</p>
   <p>さらに、造礁サンゴは石灰質の石の骨格を作ります。生きている群体の下に骨格を作り、成長とともに骨格が大きくなっていきます。</p>
   <p> </p>
