--- a/index_2.html
+++ b/index_2.html
@@ -24,11 +24,12 @@
   <p> </p>
   
 <h2>＜現状＞</h2>  
+  <p>世界的にサンゴは、熱帯～亜熱帯海域に多く分布し約800種以上が存在している！</p>
   <p>世界のサンゴ礁の58 %が潜在的に私たち人間の活動（沿岸開発、生物資源の乱獲、海洋汚染、森林伐採や農地開発に起因する表土の流出など）によって脅かされているといいます。</p>
   <p>また、温暖化等による大規模な白化現象や、台風によるサンゴ礁の破壊、食害動物による被害などもサンゴを死滅させる原因となり、サンゴ礁の存亡は国内でも各地で深刻化している。</p>
-  <p></p>
+  <p>世界的にサンゴは、熱帯～亜熱帯海域に多く分布し約800種以上が存在しています。</p>
   <h3>・参考文献</h3>
-   <img src="https://www.mitsubishicorp.com/jp/ja/csr/contribution/environment/activities01/activities01-02.html">
+  <p>1</p><img src="https://www.mitsubishicorp.com/jp/ja/csr/contribution/environment/activities01/activities01-02.html">
   <p><a href="./index.html">つづき</a></p>
 </body>
 </html>
