--- a/index_2.html
+++ b/index_2.html
@@ -18,16 +18,16 @@
   <p>現在、世界で見られるサンゴ礁は5000年以上生きているものが多く、分布範囲は、世界100カ国以上の領域にわたり、面積にして60万平方キロを超えるといわれているよ！</p>
   <p> </p>
   
-<h2>＜サンゴ＞</h2>
-  <p>個体がどんどん分裂し、群体を作りながら成長します。1つの群体には数百から数千、大きなものでは数万の個体が集まっています。</p>
-  <p>さらに、造礁サンゴは石灰質の石の骨格を作ります。生きている群体の下に骨格を作り、成長とともに骨格が大きくなっていきます。</p>
-  <p> </p>
-  
+
 <h2>＜現状＞</h2>  
-  <p>世界的にサンゴは、熱帯～亜熱帯海域に多く分布し約800種以上が存在している！</p>
+  <p>世界的にサンゴは、熱帯～亜熱帯海域に多く分布し約800種以上が存在し、日本には約400種のサンゴが生息している！</p>
+  <p>サンゴが多く生息する場所の共通した条件は、</p>
+  <h4>1.海水温が生息に適した25~28℃前後であること</h4>
+  <h4>年間を通して温かい気温や光合成に必要な日光が安定していること</h4>
+  <p>があげられるよ！</p>
   <p>世界のサンゴ礁の58 %が潜在的に私たち人間の活動（沿岸開発、生物資源の乱獲、海洋汚染、森林伐採や農地開発に起因する表土の流出など）によって脅かされているといいます。</p>
   <p>また、温暖化等による大規模な白化現象や、台風によるサンゴ礁の破壊、食害動物による被害などもサンゴを死滅させる原因となり、サンゴ礁の存亡は国内でも各地で深刻化している。</p>
-  <p>世界的にサンゴは、熱帯～亜熱帯海域に多く分布し約800種以上が存在しています。</p>
+  
   <h3>・参考文献</h3>
   <p>1</p><img src="https://www.mitsubishicorp.com/jp/ja/csr/contribution/environment/activities01/activities01-02.html">
   <p><a href="./index.html">つづき</a></p>
