--- a/index_2.html
+++ b/index_2.html
@@ -3,8 +3,8 @@
 <body>
 <h1>サンゴとサンゴ礁は違う！？</h1>
 <h2>＜サンゴとは？＞</h2>
-  <p>サンゴは、イソギンチャクやクラゲと同じ刺胞動物と呼ばれる「動物」!
-    小さな個体がいくつも集まって群体を形成している</p>
+  <p>サンゴは、イソギンチャクやクラゲと同じ刺胞動物と呼ばれる<h4>動物</h4>のこと!</p>
+  <p>小さな個体がいくつも集まって群体を形成している</p>
   <p>一つひとつのサンゴはポリプと呼ばれる本体と石灰質の骨格の部分でつくられている。</p>
   <p>サンゴの体の中には褐虫藻という植物プランクトンがたくさん！/p>
   <p>ポリプには触手に囲まれた口があり、ここで摂食や排泄、産卵などを行う！</p>
@@ -13,7 +13,7 @@
   <p> </p>
   
 <h2>＜サンゴ礁とは？＞</h2>
-  <p>サンゴ礁とはサンゴがつくった石灰質の骨格が、長い時間をかけて積み重なり海面近くまで高くなった「地形」のこと！</p>
+  <p>サンゴ礁とはサンゴがつくった石灰質の骨格が、長い時間をかけて積み重なり海面近くまで高くなった<h4>地形</h4>のこと！</p>
   <p>サンゴはそこに存在するほかの生物や水中の栄養分など、さまざまな要因を受けながら、生態活動を行っている。</p>
   <p>現在、世界で見られるサンゴ礁は5000年以上生きているものが多く、分布範囲は、世界100カ国以上の領域にわたり、面積にして60万平方キロを超えるといわれているよ！</p>
   <p> </p>
