--- a/index_2.html
+++ b/index_2.html
@@ -23,14 +23,15 @@
   <p>世界的にサンゴは、熱帯～亜熱帯海域に多く分布し約800種以上が存在し、日本には約400種のサンゴが生息している！</p>
   <p>サンゴが多く生息する場所の共通した条件は、</p>
   <h4>1.海水温が生息に適した25~28℃前後であること</h4>
-  <h4>年間を通して温かい気温や光合成に必要な日光が安定していること</h4>
+  <h4>2.年間を通して温かい気温や光合成に必要な日光が安定していること</h4>
   <p>があげられるよ！</p>
    <img src="https://kariyushi-aquarium.com/_nuxt/img/okinawa_beautiful_coral-2.ed67b20.jpg">
-  <p>世界のサンゴ礁の58 %が潜在的に私たち人間の活動（沿岸開発、生物資源の乱獲、海洋汚染、森林伐採や農地開発に起因する表土の流出など）によって脅かされているといいます。</p>
+  <p>世界のサンゴ礁の58 %が潜在的に私たち人間の活動（沿岸開発、生物資源の乱獲、海洋汚染、森林伐採や農地開発に起因する表土の流出など）によって脅かされている</p>
   <p>また、温暖化等による大規模な白化現象や、台風によるサンゴ礁の破壊、食害動物による被害などもサンゴを死滅させる原因となり、サンゴ礁の存亡は国内でも各地で深刻化している。</p>
   
   <h3>・参考文献</h3>
-  <p>1</p><p>https://www.mitsubishicorp.com/jp/ja/csr/contribution/environment/activities01/activities01-02.html</p>
+  <p>三井商業．サンゴ礁とは．https://www.mitsubishicorp.com/jp/ja/csr/contribution/environment/activities01/activities01-02.html</p>
+  <p>DMMかりゆし水族館．1-4.沖縄近海のサンゴとその現状．https://kariyushi-aquarium.com/coral/okinawa/</p>
   <p><a href="./index.html">つづき</a></p>
 </body>
 </html>
