--- a/index_2.html
+++ b/index_2.html
@@ -4,7 +4,7 @@
 <h1>サンゴとサンゴ礁は違う！？</h1>
 <h2>＜サンゴとは？＞</h2>
   <p>サンゴは、イソギンチャクやクラゲと同じ刺胞動物と呼ばれる「動物」のこと!</p>
-  <p>小さな個体がいくつも集まって群体を形成している</p>
+  <p>小さな個体がいくつも集まって群体を形成しているよ。</p>
   <p>一つひとつのサンゴはポリプと呼ばれる本体と石灰質の骨格の部分でつくられている。</p>
   <p>サンゴの体の中には褐虫藻という植物プランクトンがたくさん！/p>
   <p>ポリプには触手に囲まれた口があり、ここで摂食や排泄、産卵などを行う！</p>
