--- a/index.html
+++ b/index.html
@@ -5,26 +5,28 @@
   </head>
   <body>
    
-  <h1></h1>
+  <h2 style="color:blue;">~サンゴの生態系~</h2>
+    サンゴは褐虫藻に住み家を提供し、かわりに褐虫藻が光合成によってつくり出した酸素や、炭水化物、たんぱく質などの有機物を栄養として受け取っている。
+    一部は粘液として体外に分泌し、小さな生き物たちの栄養分になる。 海の豊かな生態系はサンゴがベースになってつくられているといえる。
     
-  <h2>＜サンゴ礁の種類＞</h2>
+  <h2 style="color:blue;">サンゴ礁にはどんな種類があるの？</h2>
     <p>◯裾礁（きょしょう）→ 海岸に接して発達したサンゴ礁。浅い礁池をもつことが多く、日本のサンゴ礁は大部分がこのタイプ。</p>
     <p>◯堡礁（ほしょう）→ 陸地とサンゴ礁の間に深さ数10mの浅い海（礁湖：ラグーン）を挟んだ沖合に発達したサンゴ礁。</p>
     <p>◯環礁（かんしょう）→ 大洋にリング状に発達し、内部に深い礁湖があるサンゴ礁。</p>
     
-  <h2>＜サンゴ礁の機能＞</h2>
-    <p style="color:blue;">→水産機能</p>
+  <h2 style="color:blue;">サンゴ礁にはどんな役割がある？</h2>
+    <p>①水産機能</p>
     <p>サンゴ礁域には色鮮やかな魚を始め、さまざまな生き物の格好の生息地になっている。サンゴ礁は海洋生物の繁殖・成育・索餌場の機能を持つので、資源涵養の場であり、好漁場としての機能を持つ。</p>
-    <p style="color:blue;">→観光、景観機能</p>
+    <p>②観光、景観機能</p>
     <p>美しいサンゴ礁域の海岸は、海水浴、マリンレジャーの場として利用されている。また、伝統行事やイベントなども開催され、地域における交流の場として活用されている。</p>
-    <p style="color:blue;">→防災機能</p>
+    <p>③防災機能</p>
     <p>海岸線がサンゴ礁に取り囲まれていることで、津波や台風などの高波浪を砕波し、背後集落の人命・財産を海岸災害から保護している。この場合のサンゴ礁は自然の防波堤と言える。
       また、サンゴの骨格や有孔虫の殻はサンゴ礁内の砂となり、砂浜の形成に大きく貢献するとともに、海岸保全の重要な役割を果たしている。</p>
-    <p style="color:blue;">→文化・教育研究の場としての機能</p>
+    <p>④文化・教育研究の場としての機能</p>
     <p>サンゴ礁域の住民は生活・文化・経済等においてサンゴ礁に大きく依存しており、サンゴ礁との関わりの中から神事や行事などの独自の文化が発達している。
       海の幸や航海の安全を祈願した海神祭やハーリーなどの神事のように、サンゴ礁がもたらす豊富な漁獲物なくして、これらの伝統的な文化の継承も難しい。
       健全なサンゴ礁生態系の存在は、これらの地域の持続・発展にとって重要である。人間活動と環境との関わり方の理解と認識を養う環境教育の場や、学問研究の場としてもサンゴ礁は利用されている。</p>
-    <p style="color:blue;">→地球環境変動の指標としての機能</p>
+    <p>⑤地球環境変動の指標としての機能</p>
     <p>サンゴの発育は地球の環境変動の影響を受け、残された骨格を調査することで過去の環境条件が推察できる。
       例えば、大型のハマサンゴからコアを採取してその年輪を用いて過去数百年にわたる水温や降水量の復元を試みることができる。
       また、骨格の中から 酸素同位体比やマグネシウム／カルシウム比など古気候のよい指標となる化学成分の探索が可能である。
