--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <h2 style="color:blue;">~サンゴの生態系~</h2>
     サンゴは褐虫藻に住み家を提供し、かわりに褐虫藻が光合成によってつくり出した酸素や、炭水化物、たんぱく質などの有機物を栄養として受け取っている。
     一部は粘液として体外に分泌し、小さな生き物たちの栄養分になる。 海の豊かな生態系はサンゴがベースになってつくられているといえる。
+    <img src="https://www.mitsubishicorp.com/jp/ja/csr/contribution/environment/activities01/activities01-03.html">
     
   <h2 style="color:blue;">サンゴ礁にはどんな種類があるの？</h2>
     <p>◯裾礁（きょしょう）→ 海岸に接して発達したサンゴ礁。浅い礁池をもつことが多く、日本のサンゴ礁は大部分がこのタイプ。</p>
