--- a/index.html
+++ b/index.html
@@ -26,18 +26,18 @@
     
   <h2 style="color:blue;">サンゴ礁にはどんな役割がある？</h2>
     
-    <p>①水産機能</p>
+    <p3>①水産機能</p3>
     <p>サンゴ礁域には色鮮やかな魚を始め、さまざまな生き物の格好の生息地になっている。サンゴ礁は海洋生物の繁殖・成育・索餌場の機能を持つので、資源涵養の場であり、好漁場としての機能を持つ。</p>
-    <p>②観光、景観機能</p>
+    <p3>②観光、景観機能</p3>
     <p>美しいサンゴ礁域の海岸は、海水浴、マリンレジャーの場として利用されている。また、伝統行事やイベントなども開催され、地域における交流の場として活用されている。</p>
-    <p>③防災機能</p>
+    <p3>③防災機能</p3>
     <p>海岸線がサンゴ礁に取り囲まれていることで、津波や台風などの高波浪を砕波し、背後集落の人命・財産を海岸災害から保護している。この場合のサンゴ礁は自然の防波堤と言える。
       また、サンゴの骨格や有孔虫の殻はサンゴ礁内の砂となり、砂浜の形成に大きく貢献するとともに、海岸保全の重要な役割を果たしている。</p>
-    <p>④文化・教育研究の場としての機能</p>
+    <p3>④文化・教育研究の場としての機能</p3>
     <p>サンゴ礁域の住民は生活・文化・経済等においてサンゴ礁に大きく依存しており、サンゴ礁との関わりの中から神事や行事などの独自の文化が発達している。
       海の幸や航海の安全を祈願した海神祭やハーリーなどの神事のように、サンゴ礁がもたらす豊富な漁獲物なくして、これらの伝統的な文化の継承も難しい。
       健全なサンゴ礁生態系の存在は、これらの地域の持続・発展にとって重要である。人間活動と環境との関わり方の理解と認識を養う環境教育の場や、学問研究の場としてもサンゴ礁は利用されている。</p>
-    <p>⑤地球環境変動の指標としての機能</p>
+    <p3>⑤地球環境変動の指標としての機能</p3>
     <p>サンゴの発育は地球の環境変動の影響を受け、残された骨格を調査することで過去の環境条件が推察できる。
       例えば、大型のハマサンゴからコアを採取してその年輪を用いて過去数百年にわたる水温や降水量の復元を試みることができる。
       また、骨格の中から 酸素同位体比やマグネシウム／カルシウム比など古気候のよい指標となる化学成分の探索が可能である。
