--- a/index_main.html
+++ b/index_main.html
@@ -3,12 +3,8 @@
 
 <body>
 <h1>サンゴを守るために</h1>
-<p><a href="./index_2.html">サンゴについて</a><p>
-
-  
-  
-  
-  
+<p><a href="./index_2.html">サンゴについて</a><p>  
 <p><a href="https://hoshinokazu.github.io/">オニヒトデの有効活用法</a><p>
+<p><a href="https://mayuuuuuu.github.io/">オニヒトデ回収装置</a><p>
 </body>
 </html>
