--- a/index_main.html
+++ b/index_main.html
@@ -5,6 +5,6 @@
 <h1>サンゴを守るために</h1>
 <p><a href="./index_2.html">サンゴについて</a><p>  
 <p><a href="https://hoshinokazu.github.io/">オニヒトデの有効活用法</a><p>
-<p><a href="https://mayuuuuuu.github.io/">オニヒトデ回収装置</a><p>
+<p><a href="https://mayuuuuuu.github.io/en_6/index.html">オニヒトデ回収装置</a><p>
 </body>
 </html>
