--- a/index_main.html
+++ b/index_main.html
@@ -5,14 +5,16 @@
 <h1>サンゴを守るために</h1>
 <h3>サンゴの減少により生態系が崩壊!？</h3>
   
-<p>サンゴの基本情報！↓↓↓</p>
-<p><a href="./index_2.html">サンゴについて</a><p>  
+<p>サンゴの基本情報！</p>
+<p>→<a href="./index_2.html">サンゴについて</a><p> 
  
-
-<p><a href="https://mayuuuuuu.github.io/en_6/index.html">オニヒトデ回収装置</a><p>
+<p>サンゴ減少の原因のひとつはオニヒトデ！？</p>
+ 
+<p>オニヒトデを装置で回収！？</p>
+<p>→<a href="https://mayuuuuuu.github.io/en_6/index.html">オニヒトデ回収装置</a><p>
   
-<p>オニヒトデは有効活用できるの？↓↓↓</p>
-<p><a href="https://hoshinokazu.github.io/">オニヒトデの有効活用法</a><p>
+<p>オニヒトデは有効活用できるの？</p>
+<p>→<a href="https://hoshinokazu.github.io/">オニヒトデの有効活用法</a><p>
 
 
 </body>
