--- a/index_main.html
+++ b/index_main.html
@@ -5,15 +5,17 @@
 <h1>サンゴを守るために</h1>
 <h3>サンゴの減少により生態系が崩壊!？</h3>
   
-<p>サンゴの基本情報！</p>
+<h4>サンゴのこと詳しく教えて！</h4>
 <p>→<a href="./index_2.html">サンゴについて</a><p> 
+
+<h4>サンゴ減少の原因のひとつはオニヒトデ！？</h4>
+  
+ <h4>オニヒトデの駆除方法は安全なの？</h4>
  
-<p>サンゴ減少の原因のひとつはオニヒトデ！？</p>
- 
-<p>オニヒトデを装置で回収！？</p>
+<h4>オニヒトデを回収する装置！？</h4>
 <p>→<a href="https://mayuuuuuu.github.io/en_6/index.html">オニヒトデ回収装置</a><p>
   
-<p>オニヒトデは有効活用できるの？</p>
+<h4>オニヒトデは有効活用できるの？</h4>
 <p>→<a href="https://hoshinokazu.github.io/">オニヒトデの有効活用法</a><p>
 
 
