--- a/index_main.html
+++ b/index_main.html
@@ -5,8 +5,8 @@
 <h1>サンゴを守るために</h1>
 <h3>サンゴの減少により生態系が崩壊!？</h3>
   
-<h4>サンゴのこと詳しく教えて！→</h4><p><a href="./index_2.html">サンゴについて</a><p> 
-<p>→<a href="./index_2.html">サンゴについて</a><p> 
+<h4>サンゴのこと詳しく教えて！→</h4><a href="./index_2.html">サンゴについて</a>
+
 
 <h4>サンゴ減少の原因のひとつはオニヒトデ！？</h4>
   
