--- a/index_main.html
+++ b/index_main.html
@@ -6,12 +6,14 @@
 <h3>サンゴの減少により生態系が崩壊!？</h3>
   
 <h4>サンゴのこと詳しく教えて！</h4>
-<p><a href="./index_2.html">サンゴについて</a></p>
+<p>→<a href="./index_2.html">サンゴについて</a></p>
 
 
 <h4>サンゴ減少の原因のひとつはオニヒトデ！？</h4>
+<p>→<a href="     "></p>
   
- <h4>オニヒトデの駆除方法は安全なの？</h4>
+<h4>オニヒトデの駆除は安全なの？</h4>
+ <p>→<a href="    "></p>
  
 <h4>オニヒトデを回収する装置！？</h4>
 <p>→<a href="https://mayuuuuuu.github.io/en_6/index.html">オニヒトデ回収装置</a><p>
