--- a/index_2.html
+++ b/index_2.html
@@ -32,6 +32,6 @@
   <h3>・参考文献</h3>
   <p>三井商業．サンゴ礁とは．https://www.mitsubishicorp.com/jp/ja/csr/contribution/environment/activities01/activities01-02.html</p>
   <p>DMMかりゆし水族館．2019．1-4.沖縄近海のサンゴとその現状．https://kariyushi-aquarium.com/coral/okinawa/</p>
-  <p><a href="./index.html">つづき</a></p>
+  <p><a href="./index.html">次へ</a></p>
 </body>
 </html>
