--- a/index_main.html
+++ b/index_main.html
@@ -12,8 +12,8 @@
 <h4>サンゴ減少の原因のひとつはオニヒトデ！？</h4>
 <p>→<a href="   "></a>   </p>
   
-<h4>オニヒトデの駆除は安全なの？</h4>
- <p>→<a href="   "></a>   </p>
+<h4>オニヒトデの対策</h4>
+ <p>→<a href="onihitode-taisaku.html"></a>   </p>
  
 <h4>オニヒトデを回収する装置！？</h4>
 <p>→<a href="https://mayuuuuuu.github.io/en_6/index.html">オニヒトデ回収装置</a><p>
