--- a/index_4.html
+++ b/index_4.html
@@ -1,1 +1,43 @@
+<!DOCTYPE html<>
+</head>
+<body>
+
+<h1>サンゴの現状</h1>
+<h3>「オニヒトデの食害被害」　に大きく悩まされている！</h3>
+<p>現在、サンゴは 地球温暖化の影響による白化現象　と　オニヒトデの大量発生による食害被害 に特に悩まされています。</p>
+  
+<p>沖縄県では1970年代にオニヒトデが大量発生し、1970年代末には沖縄本島のサンゴ礁がほぼ全滅しました。1990年代に入ってしばらくオニヒトデが減少し、サンゴが回復する傾向にあったものの、1990年末から現在にかけて再びオニヒトデの増加が確認され、離島も含め全域でオニヒトデの食害が確認されています。</p>
+  
+<p>オニヒトデの大量発生の原因は　自然発生説　と　人為的な要因　のどちらかと考えられているものの、詳細に関しては全く解明されていないんだ！</p>
+  
+<h3>Point!</h3>
+<li>オニヒトデの食害が深刻</li>
+<li>1970年からオニヒトデの大量発生が始まった</li>
+<li>大量発生の原因は現状分かっていない</li>
+<img src="https://user-images.githubusercontent.com/93563874/148791308-27cfed5e-2dce-492e-b05e-427a71fbd5bb.jpg"> 
+   
+  
+<h2>オニヒトデって何？</h2>
+<img src="https://user-images.githubusercontent.com/93563874/148792091-9f2af9d9-010e-41dc-89b3-ce7073bfd9dd.jpg">
+<p>太平洋やインド洋に分布し、体長は30cm～最大60cm</p>    
+<p>　　体色：灰色、オレンジ色、緑がかった黄色</p>   
+<p>　　　棘：赤色、全身が毒針で覆われている</p>
+<p>毒の症状：強い痛み、腫れ、粘膜から接触性皮膚炎   アナフィラキシーショックの発症が高く、最悪の場合亡くなる可能性もあり。</p>
+<h3>Point!</h3>
+<li>全身が毒針で覆われている</li>
+<li>毒によるアナフィラキシーショックがとても危険</li>
+<p>もし見かけても　触らないようにしよう！</p>　
+ 
+
+<h1>オニヒトデの人的被害</h1>
+<h3>手を用いた際の被害が多い！</h3>
+<p>2013年　沖縄県で行われたアンケート調査(オニヒトデ駆除による刺傷被害についてのアンケート:139人)によると、アンケートに回答した半数以上の54.0%が刺傷被害にあったと回答している他、オニヒトデ駆除歴21年以上の方の刺傷被害が92.3%にのぼっていることから、駆除歴が長ければ長くなるほど刺傷被害が多いことが分かっています。</P>
+<p>また、刺傷被害が起きた駆除方法は、かぎ手や酢酸注入など「人の手」を用いた際の作業が多いことから、「人間の手を用いない方法での駆除方法」の検討が世界的にも行われているよ！</P>
+<h3>Point!</h3>
+<li>オニヒトデの刺傷は駆除している方の約半数に被害</li>
+<li>駆除歴が長いと、一度は被害にあうほど危険になる</li>
+<li>かぎ手、酢酸注入など　直接手を使う作業　の際に刺されることが大半を占めている</li>
+
+</body>
+</html>
 
