--- a/index_main.html
+++ b/index_main.html
@@ -10,7 +10,7 @@
 
 
 <h4>サンゴ減少の原因のひとつはオニヒトデ！？</h4>
-<p>→<a href="   "></a>   </p>
+<p>→<a href="https://airi5733.github.io/environment/index_4.html"></a>   </p>
   
 <h4>オニヒトデの対策</h4>
  <p>→<a href="onihitode-taisaku.html"></a></p>
