--- a/index_main.html
+++ b/index_main.html
@@ -10,10 +10,10 @@
 
 
 <h4>サンゴ減少の原因のひとつはオニヒトデ！？</h4>
-<p>→<a href="https://airi5733.github.io/environment/index_4.html"></a>   </p>
+<p>→<a href="https://airi5733.github.io/environment/index_4.html"></a>サンゴ減少の原因</p>
   
 <h4>オニヒトデの対策</h4>
- <p>→<a href="onihitode-taisaku.html"></a></p>
+ <p>→<a href="https://airi5733.github.io/environment/index_3.html"></a>オニヒトデの対策</p>
  
 <h4>オニヒトデを回収する装置！？</h4>
 <p>→<a href="https://mayuuuuuu.github.io/en_6/index.html">オニヒトデ回収装置</a><p>
