--- a/index_4.html
+++ b/index_4.html
@@ -38,6 +38,9 @@
 <li>駆除歴が長いと、一度は被害にあうほど危険になる</li>
 <li>かぎ手、酢酸注入など　直接手を使う作業　の際に刺されることが大半を占めている</li>
 
+<h4>オニヒトデの対策</h4>
+<p>→<a href="https://airi5733.github.io/environment/index_3.html">オニヒトデの対策</a></p>
+ 
 </body>
 </html>
 
