--- a/index_3.html
+++ b/index_3.html
@@ -37,5 +37,9 @@
   <p>オニヒトデの大量発生を予測することは困難であるが、関係団体等も一緒になった監視体制を整えることができれば、オニヒトデの増加をいち速く察知でき迅速なオニヒトデ対策が行える。</p>
   <h4>参考文献</h4>
   <a href=https://www.pref.okinawa.jp/site/kankyo/shizen/hogo/onihitode_guideline.html>https://www.pref.okinawa.jp/site/kankyo/shizen/hogo/onihitode_guideline.html</a>
-  </body>
+ 
+  
+<h4>オニヒトデを回収する装置！？</h4>
+<p>→<a href="https://mayuuuuuu.github.io/en_6/index.html">オニヒトデ回収装置</a><p>
+ </body>
 </html>
