--- a/index_main.html
+++ b/index_main.html
@@ -3,7 +3,7 @@
 
 <body>
 <h1>サンゴを守るために</h1>
-<h3>サンゴの減少により生態系が崩壊!？</h3>
+<h3 style="color:blue;">サンゴの減少により生態系が崩壊!？</h3>
   
 <h4>サンゴのこと詳しく教えて！</h4>
 <p>→<a href="./index_2.html">サンゴについて</a></p>
